--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -84,17 +84,24 @@ a {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
+    align-items: flex-start;
   }
   .left-column, .main-container {
     flex-basis: 48%; 
     margin: 20px 0; 
   }
   .left-column {
-
+  position: sticky;
+  top: 0;
   }
   .main-container {
     flex-grow: 1;
   }
+}
+
+.header h1 .header p .header ul .header ul li {
+  margin: 0;
+    padding: 0;
 }
 
 #blog-posts .blog-post {
