--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -21,7 +21,7 @@ a {
 .site-logo {
   width: 205px;
   height: auto;
-  border-radius: 10px
+  border-radius: 10px;
   border: 1px solid #2E8B57;
   display: block;
   margin-bottom: 20px; 
