--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -23,6 +23,7 @@ a {
   height: auto;
   border-radius: 10px;
   border: 1px solid #2E8B57;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.2);
   display: block;
   margin-bottom: 20px; 
 }
