--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,17 +35,17 @@
         {% endif %}
         <!-- Barchart links attempt -->
         <div class="bar-chart">
-          <a href="https://github.com/yourusername" class="bar github" style="width: calc(20% + 40px);">
-            <img src="github-icon.svg" alt="GitHub" /> GitHub
+          <a href="https://github.com/richmulvany" class="bar github" style="width: calc(20% + 40px);">
+            <img src="https://www.svgrepo.com/show/512317/github-142.svg" alt="GitHub" /> GitHub
           </a>
-          <a href="https://linkedin.com/in/yourusername" class="bar linkedin" style="width: calc(20% + 60px);">
-            <img src="linkedin-icon.svg" alt="LinkedIn" /> LinkedIn
+          <a href="https://linkedin.com/in/richmulvany class="bar linkedin" style="width: calc(20% + 60px);">
+            <img src="https://www.svgrepo.com/show/922/linkedin.svg" alt="LinkedIn" /> LinkedIn
           </a>
-          <a href="https://hashnode.com/@yourusername" class="bar hashnode" style="width: calc(20% + 80px);">
-            <img src="hashnode-icon.svg" alt="Hashnode" /> Hashnode
+          <a href="https://hashnode.com/@richmulvany" class="bar hashnode" style="width: calc(20% + 80px);">
+            <img src="https://www.svgrepo.com/show/330611/hashnode.svg" alt="Hashnode" /> Hashnode
           </a>
-          <a href="mailto:your.email@example.com" class="bar email" style="width: calc(20% + 20px);">
-            <img src="email-icon.svg" alt="Email" /> Email
+          <a href="mailto:richard.mulvany@hotmail.co.uk" class="bar email" style="width: calc(20% + 20px);">
+            <img src="https://www.svgrepo.com/show/502648/email.svg" alt="Email" /> Email
           </a>
         </div>
         <!-- Barchart links attempt end -->
@@ -119,6 +119,16 @@ document.addEventListener("DOMContentLoaded", function() {
     });
   }
 });
+</script>
+<!-- Bar Chart Links script -->  
+<script>
+  document.addEventListener('DOMContentLoaded', function() {
+    const bars = document.querySelectorAll('.bar');
+    bars.forEach(bar => {
+      const randomWidth = 20 + Math.random() * 80; // Random width between 20% and 100%
+      bar.style.width = `${randomWidth}%`;
+    });
+  });
 </script>
 
 </body>
