--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,20 +34,24 @@
         </ul>
         {% endif %}
         <!-- Barchart links attempt -->
-        <div class="bar-chart">
-          <a href="https://github.com/richmulvany" class="bar github" style="width: calc(20% + 40px);">
-            <img src="https://www.svgrepo.com/show/512317/github-142.svg" alt="GitHub" /> GitHub
-          </a>
-          <a href="https://linkedin.com/in/richmulvany class="bar linkedin" style="width: calc(20% + 60px);">
-            <img src="https://www.svgrepo.com/show/922/linkedin.svg" alt="LinkedIn" /> LinkedIn
-          </a>
-          <a href="https://hashnode.com/@richmulvany" class="bar hashnode" style="width: calc(20% + 80px);">
-            <img src="https://www.svgrepo.com/show/330611/hashnode.svg" alt="Hashnode" /> Hashnode
-          </a>
-          <a href="mailto:richard.mulvany@hotmail.co.uk" class="bar email" style="width: calc(20% + 20px);">
-            <img src="https://www.svgrepo.com/show/502648/email.svg" alt="Email" /> Email
-          </a>
-        </div>
+<div class="bar-chart">
+  <div class="icon-bar-container">
+    <img src="https://www.svgrepo.com/show/512317/github-142.svg" alt="GitHub" class="icon"/>
+    <a href="https://github.com/richmulvany" class="bar github">GitHub</a>
+  </div>
+  <div class="icon-bar-container">
+    <img src="https://www.svgrepo.com/show/922/linkedin.svg" alt="LinkedIn" class="icon"/>
+    <a href="https://linkedin.com/in/richmulvany" class="bar linkedin">LinkedIn</a>
+  </div>
+  <div class="icon-bar-container">
+    <img src="https://www.svgrepo.com/show/330611/hashnode.svg" alt="Hashnode" class="icon"/>
+    <a href="https://hashnode.com/@richmulvany" class="bar hashnode">Hashnode</a>
+  </div>
+  <div class="icon-bar-container">
+    <img src="https://www.svgrepo.com/show/502648/email.svg" alt="Email" class="icon"/>
+    <a href="mailto:richard.mulvany@hotmail.co.uk" class="bar email">Email</a>
+  </div>
+</div>
         <!-- Barchart links attempt end -->
       </header>
     </div>
