--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -168,7 +168,7 @@ a {
   padding: 10px;
   border-radius: 5px;
   text-decoration: none; /* Removes underline */
-  min-width: 120px;
+  width: 360px;
 }
 
 /* Example hover effect */
