--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -188,23 +188,22 @@ a {
   }
   25% {
     transform: translateX(5px);
+    width: 25%; 
   }
   50% {
     transform: translateX(-5px);
+    width: 50%; 
   }
   75% {
     transform: translateX(5px);
+    width: 75%; 
   }
   100% {
     transform: translateX(0);
-    width: calc(20% + 40px); /* Example final width, adjust as needed */
+    width: 100%; 
   }
 }
 
 .bar {
   animation: growAndMove 2s ease-in-out forwards;
-}
-
-.bar {
-  animation: moveAround 2s ease-in-out;
 }
