--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -141,6 +141,34 @@ a {
   border-color: #2E8B57; /* Pine green border on hover */
 }
 
+@keyframes fluctuateBar1 {
+  0%, 100% { width: 70%; }
+  25% { width: 65%; }
+  50% { width: 75%; }
+  75% { width: 68%; }
+}
+
+@keyframes fluctuateBar2 {
+  0%, 100% { width: 50%; }
+  25% { width: 55%; }
+  50% { width: 45%; }
+  75% { width: 52%; }
+}
+
+@keyframes fluctuateBar3 {
+  0%, 100% { width: 80%; }
+  25% { width: 75%; }
+  50% { width: 85%; }
+  75% { width: 78%; }
+}
+
+@keyframes fluctuateBar4 {
+  0%, 100% { width: 30%; }
+  25% { width: 35%; }
+  50% { width: 25%; }
+  75% { width: 32%; }
+}
+
 .bar-chart {
   display: flex;
   flex-direction: column;
@@ -160,59 +188,35 @@ a {
   height: auto;
 }
 
+.bar.github {
+  animation: fluctuateBar1 2s ease-in-out;
+}
+
+.bar.linkedin {
+  animation: fluctuateBar2 2s ease-in-out;
+}
+
+.bar.hashnode {
+  animation: fluctuateBar3 2s ease-in-out;
+}
+
+.bar.email {
+  animation: fluctuateBar4 2s ease-in-out;
+}
+
 .bar {
-  flex: 0 0 auto; // Do not grow, do not shrink, initial size is auto
-  width: 70%; // Example width, adjust according to your needs
-  // If you're setting specific widths based on classes, ensure they are correctly applied here
+  display: flex;
+  align-items: center;
   background-color: #e0e0e0;
+  color: #333;
   padding: 10px;
   border-radius: 5px;
   text-decoration: none;
-  color: #333;
-  align-items: center;
-  display: flex;
-
-  // Ensure this rule is not being overridden by more specific selectors
-  &:hover {
-    background-color: #cacaca;
-  }
+  min-width: 120px; /* Minimum width to ensure visibility */
 }
 
-// Example specific widths for each bar
-.bar.github { width: 100%; }
-.bar.linkedin { width: 15%; }
-.bar.hashnode { width: 120%; }
+/* Then set the specific initial widths (optional if using animations to set widths) */
+.bar.github { width: 70%; }
+.bar.linkedin { width: 50%; }
+.bar.hashnode { width: 80%; }
 .bar.email { width: 30%; }
-
-
-/* Example hover effect */
-.bar:hover {
-  background-color: #cacaca;
-}
-
-@keyframes growAndMove {
-  0% {
-    transform: translateX(-10px);
-    width: 0%;
-  }
-  25% {
-    transform: translateX(5px);
-    width: 25%; 
-  }
-  50% {
-    transform: translateX(-5px);
-    width: 50%; 
-  }
-  75% {
-    transform: translateX(5px);
-    width: 75%; 
-  }
-  100% {
-    transform: translateX(0);
-    width: 100%; 
-  }
-}
-
-.bar {
-  animation: growAndMove 2s ease-in-out forwards;
-}
