--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -205,22 +205,22 @@ a {
 }
 
 .bar.github {
-  background-color: #8FBC8F; /* Muted sea green */
+  background-color: #4F7942; /* Dark fern green, reminiscent of dense foliage */
   animation: growAndSettleGithub 2s ease-in-out forwards;
 }
 
 .bar.linkedin {
-  background-color: #90EE90; /* Soft light green, slightly more vibrant */
+  background-color: #3B6F58; /* Deep sea green, evoking shadowed underbrush */
   animation: growAndSettleLinkedin 2s ease-in-out forwards;
 }
 
 .bar.hashnode {
-  background-color: #98FB98; /* Pale green, a touch softer */
+  background-color: #2E503D; /* Dark slate gray with a green undertone, like forest at dusk */
   animation: growAndSettleHashnode 2s ease-in-out forwards;
 }
 
 .bar.email {
-  background-color: #778899; /* Light Slate Gray, for a muted contrast */
+  background-color: #355E3B; /* Dark moss green, suggesting a damp, earthy forest floor */
   animation: growAndSettleEmail 2s ease-in-out forwards;
 }
 
