--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -145,7 +145,7 @@ a {
   0% { width: 0%; }
   50% { width: 120%; }
   70% { width: 110%; }
-  90% { width: 115%; }
+  90% { width: 125%; }
   100% { width: 130%; }
 }
 
@@ -160,8 +160,8 @@ a {
 @keyframes growAndSettleHashnode {
   0% { width: 0%; }
   50% { width: 130%; }
-  70% { width: 100%; }
-  90% { width: 125%; }
+  70% { width: 115%; }
+  90% { width: 140%; }
   100% { width: 150%; }
 }
 
@@ -196,12 +196,13 @@ a {
 .bar {
   flex: 0 0 auto;
   align-items: center;
+  color: white; /* Set text color to white */
   background-color: #e0e0e0;
   color: #333;
   padding: 10px;
   border-radius: 5px;
   text-decoration: none;
-  // Removed the general width declaration here
+  transition: all 0.3s ease; /* Smooth transition for hover effects */
 }
 
 .bar.github {
