--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -196,9 +196,8 @@ a {
 .bar {
   flex: 0 0 auto;
   align-items: center;
-  color: white; /* Set text color to white */
   background-color: #e0e0e0;
-  color: #333;
+  color: white;
   padding: 10px;
   border-radius: 5px;
   text-decoration: none;
